refactor stream method for Java17